# src/levels-owners-prograssion/models/level-owner-progression.model.ts
@@ -1,0 +1,13 @@
+export class LevelOwnerProgression {
+  id?: number;
+  ownerType: string;
+  ownerId: string;
+  levelOrder: number;
+  score: number;
+  createdAt?: Date;
+  updatedAt?: Date;
+
+  constructor(partial: Partial<LevelOwnerProgression>) {
+    Object.assign(this, partial);
+  }
+}
